--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/french-toast.html" target="_blank" rel="noopener noreferrer">French Toast</a>
 </body>
 </html>
