Fix missing body tag

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>French Toast Recipe</title>
 </head>
+<body>
     <a href="../index.html">Home</a>
 
     <h1>French Toast</h1>
@@ -33,4 +34,5 @@
         <li>For each piece, dip it in mixture for 3 seconds per side.</li>
         <li>Place piece on pan and cook for 3-4 minutes per side until golden brown.</li>
     </ol>
+</body>
 </html>
