--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/french-toast.html" target="_blank" rel="noopener noreferrer">French Toast</a>
+    <ul>
+        <li><a href="./recipes/french-toast.html" target="_blank" rel="noopener noreferrer">French Toast</a></li>
+        <li><a href="./recipes/breakfast-sandwich.html" target="_blank" rel="noopener noreferrer">Breakfast Sandwich</a></li>
+        <li><a href="./recipes/snickerdoodle.html" target="_blank" rel="noopener noreferrer">Snickerdoodle</a></li>
+    </ul>
 </body>
 </html>
