--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipe Homepage</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/french-toast.html" target="_blank" rel="noopener noreferrer">French Toast</a></li>
-        <li><a href="./recipes/breakfast-sandwich.html" target="_blank" rel="noopener noreferrer">Breakfast Sandwich</a></li>
-        <li><a href="./recipes/snickerdoodle.html" target="_blank" rel="noopener noreferrer">Snickerdoodle</a></li>
+        <li><a href="./recipes/french-toast.html" target="_self" rel="noopener noreferrer">French Toast</a></li>
+        <li><a href="./recipes/breakfast-sandwich.html" target="_self" rel="noopener noreferrer">Breakfast Sandwich</a></li>
+        <li><a href="./recipes/snickerdoodle.html" target="_self" rel="noopener noreferrer">Snickerdoodle</a></li>
     </ul>
 </body>
 </html>
