Add stylesheets to recipes

--- a/recipes/breakfast-sandwich.html
+++ b/recipes/breakfast-sandwich.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Breakfast Sandwich Recipe</title>
+    <link rel="stylesheet" href="../index.css">
 </head>
     <a href="../index.html">Home</a>
 
