--- a/recipes/snickerdoodle.html
+++ b/recipes/snickerdoodle.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Snickerdoodle Recipe</title>
+    <link rel="stylesheet" href="../index.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
